--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Xavier Johnson</h1>
+            <h2>Mechanical Engineer</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,27 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        My name is Xavier Johnson and I am going to gradute with a Bachelor's degree in Mechanical
+			Engineering in Spring 2024. In my years at the university of Tennessee I have completed 2 
+			semester long internships, 2 summer internships, and worked with 3 different professors as an
+			Undergraduate Research Assistant. Since I first came to college I felt an urge to learn more 
+			    about the engineering world and let my curiosity loose. Doing this allowed me to be open 
+			    for any new oppurinity to learn even if it meant doing something I wasnt familar with.
+			    In Fall 2020, I completed a design/quailty engineering co-op rotation with BSH Home Appliances. 
+			    In Summer 2021 and Fall 2021 I did a mechanical engineering co-op with Siemens Healthineers.
+			    In summer 2022 I went to Califonia to do a hardware relability engineering internship with Amazon 
+			    Lab 126. During this internship, I got a return offer as a Product Design Engineering intern
+			    working on future amazon products in Summmer 2023. During my years, I worked in three different
+			    Undergraduate Research Labs, they first I designed enclosures for electronic compents for a six
+			    DOF arm, second I helped research how ABS transitions to TPU, my last one was researching how 
+			    to design a microdroplet printer. During my last year of undergratue studies I will be a 
+			    Lead Ambassador for the proffesional practice as we enter a new era with new personel from 
+			    top to bottom. The previous year I was the social media Ambassador and boosted all of our post
+			    by nearly 3x their previous likes and interactions. I was able to interview very talented
+			    engineers and was able to help numerous students in their professional development. I honestly
+			    love engineering and am excited for the future wherever that may be.
+           
+
                     </p>
                 </div>
             </div>
@@ -86,25 +104,40 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2024 – August 2024">
+                <h3>ASML</h3>
+                <h4>Mechanical Engineer Intern</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2023 – August 2023>
+                <h3>Amazon Lab 126</h3>
+                <h4>Product Design Engineer Intern</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="May 2022 – August 2022">
+                <h3>Amazon Lab 126</h3>
+                <h4>Hardware Reliability Engineer Intern</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+
+	     <div data-date="May 2021 – Jan 2022">
+                <h3> Siemens Healthineers </h3>
+                <h4>Mechanical Engineer Intern</h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                </p>
+            </div>
+	     <div data-date="Aug 2020 – Jan 2021">
+                <h3>Bosch Home Appliances</h3>
+                <h4>Mechanical Engineer Intern</h4>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                 </p>
@@ -116,9 +149,9 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>University of California Berkeley</h3>
+            <span class="education-date">Aug 2024 - May 2025</span>
+            <h4>Master of Engineering in Mechanical Engineering</h4>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
             </p>
@@ -126,9 +159,9 @@
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>University of Tennessee Knoxville</h3>
+            <span class="education-date">Aug 2019 - May 2024</span>
+            <h4>Bachelor of Science in Mechanical Engineering</h4>
             <ul>
                 <li>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -237,7 +270,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2024</span> Xavier Johnson
                     </p>
                 </div>
                 <div class="col-sm-2 top">
