--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </p>
             </div>
 
-            <div data-date="May 2023 – August 2023>
+            <div data-date="May 2023 – August 2023">
                 <h3>Amazon Lab 126</h3>
                 <h4>Product Design Engineer Intern</h4>
                 <p>
