--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/SD2024.pdf" />
+                        <img src="images/project.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
