--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="images/SD2024.pdf">View Project</a>
+                        <a href="https://drive.google.com/file/d/1H3yFXIKiBJqDosS0eC7vsrelWDy-uqQM/view?usp=drive_link">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
