--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            
-        <div class="experience-details">
+            <div class="experience-details">
+	<div data-date="May 2023 – August 2023">
                 <h3>ASML</h3>
                 <h4>Mechanical Engineer Intern</h4>
                 <p>
