--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Xavier Johnson</h1>
             <h2>Mechanical Engineer</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="images/ResumeXJ127.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -172,7 +172,7 @@
                         <p>
 				Designed a Golf Calibration machine utilizing load cells, a scavenged Wii Board, and various electronic components
                         </p>
-                        <a href= "images/SD2024.pdf "target ="_blank">Home connect</a>
+                        <a href= "images/SD2024.pdf "target ="_blank">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -188,8 +188,8 @@
                         <p>
 				Programmed code for testing that communicates to refrigerators home connect and changes certain settings (Change Temp, Change Freeze). Also created GUI to make interface for engineers to interact with code easier.
                          </p>
-                        <a href="https://drive.google.com/file/d/1H3yFXIKiBJqDosS0eC7vsrelWDy-uqQM/view?usp=drive_link">View Project</a>
-			<a href="https://drive.google.com/file/d/1yJLXa6cA6BPDqYFInVfPWj7fyn2-bLSZ/view?usp=drive_link">View Demo</a>
+                        <a href="https://drive.google.com/file/d/1H3yFXIKiBJqDosS0eC7vsrelWDy-uqQM/view?usp=drive_link "target ="_blank">View Project</a>
+			<a href="https://drive.google.com/file/d/1yJLXa6cA6BPDqYFInVfPWj7fyn2-bLSZ/view?usp=drive_link "target ="_blank">View Demo</a>
 			    
                     </div>
                     <!-- End .project-info -->
@@ -208,8 +208,8 @@
 			Developed code for a custom speaker that focuses on appealing to the mental health of students and assists them in daily life. Created a speech recognition robot in Python that can tell the weather by utilizing an API, say different phrases based on input, give the time and date, and send an email including various resources that are tailored towards engineers
 
                         </p>
-                        <a href="https://drive.google.com/file/d/12DeW7-NNDz6rB559_zzc7WATekWQGiGN/view?usp=drive_link">View Project</a>
-			<a href="https://drive.google.com/file/d/17hxfVL0HaMY7PWZJw7RcxLOd-62BzEtB/view?usp=drive_link">View Demo</a>
+                        <a href="https://drive.google.com/file/d/12DeW7-NNDz6rB559_zzc7WATekWQGiGN/view?usp=drive_link "target ="_blank">View Project</a>
+			<a href="https://drive.google.com/file/d/17hxfVL0HaMY7PWZJw7RcxLOd-62BzEtB/view?usp=drive_link "target ="_blank">View Demo</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
