--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Xavier Johnson</h1>
             <h2>Mechanical Engineer</h2>
-            <a href="images/ResumeXJ127.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="images/ResumeXJ127.pdf "target ="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
