--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/golf.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -180,7 +180,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/fridge.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -199,7 +199,7 @@
 
 		<div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/robot.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -215,11 +215,7 @@
                 </div>
                 <!-- End .project -->
             </div>
-	    <div class="project shadow-large">
-                    <div class="project-image">
-                        <img src="images/project.jpg" />
-                    </div>
-                    <!-- End .project-image -->
+	    
                     
             </div>
         </div>
