--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                         </p>
                         <a href= "images/SD2024.pdf "target ="_blank">View Project</a>
                     </div>
+			     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
