--- a/index.html
+++ b/index.html
@@ -163,6 +163,20 @@
         <div class="container">
             <div class="row">
 
+		     <div class="project shadow-large">
+                    <div class="project no-image">
+                      
+                    <div class="project-info">
+                        <h3>Capstone Berkeley 24-25 - Omni Directional Treadmill</h3>
+                        <p>
+				Attempting to design an Omni-Directional Treadmill utilizing unconventional methods (no motor, belt drive). Currently prototying different methods implementing magnetism and friction a brake.
+                        </p>
+                        <a href= "#">coming soon</a>
+                    </div>
+			     </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
 		    
                 <div class="project shadow-large">
                     <div class="project no-image">
@@ -178,6 +192,7 @@
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
 
                 <div class="project shadow-large">
                     <div class="project no-image">
