--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="project-info">
                         <h3>Capstone Berkeley 24-25 - Omni Directional Treadmill</h3>
                         <p>
-				Attempting to design an Omni-Directional Treadmill utilizing unconventional methods (no motor, belt drive). Currently prototying different methods implementing magnetism and friction a brake.
+				Attempting to design an Omni-Directional Treadmill utilizing unconventional methods (no motor, belt drive). Currently prototying different methods implementing magnetism and friction for braking.
                         </p>
                         <a href= "#">coming soon</a>
                     </div>
