--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-	<div data-date="May 2023 – August 2023">
+	<div data-date="May 2024 – August 2024">
                 <h3>ASML</h3>
                 <h4>Mechanical Engineer Intern</h4>
                 <p>
@@ -237,32 +237,20 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
+            <li>SolidWorks</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Siemens NX</li>
+            <li>CREO</li>
+            <li>Fusion 360</li>
+            <li>FEA</li>
+            <li>Nastran</li>
+            <li>CREO SIMULATE</li>
+            <li>3D Printing</li>
+            <li>GD&T</li>
+            <li>DFM</li>
+            <li>Product Management</li>
+            <li>Reliability Testing</li>
+           
         </ul>
     </div>
     <!-- End #skills -->
@@ -270,7 +258,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/xavier_johnson@berkeley.edu">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
