--- a/index.html
+++ b/index.html
@@ -176,6 +176,18 @@
 			     </div>
                     <!-- End .project-info -->
                 </div>
+		    <div class="project shadow-large">
+                    <div class="project no-image">
+                      
+                    <div class="project-info">
+                        <h3>Asthma Detection Device </h3>
+                        <p>
+				This project focuses on developing a wearable device that integrates seamlessly into the
+daily routines of children and their caregivers, enabling timely detection of respiratory
+irregularities.
+                         </p>
+                        <a href="images/Areport.pdf "target ="_blank">View Report </a>
+			<a href="images/Aposter.pdf "target ="_blank">View Design Poster</a>
                 <!-- End .project -->
 		    
                 <div class="project shadow-large">
