--- a/index.html
+++ b/index.html
@@ -186,9 +186,10 @@
 daily routines of children and their caregivers, enabling timely detection of respiratory
 irregularities.
                          </p>
-                        <a href="images/Areport.pdf "target ="_blank">View Report </a>
-			<a href="images/Aposter.pdf "target ="_blank">View Design Poster</a>
+                        <a href="images/areport.pdf "target ="_blank">View Report </a>
+			<a href="images/aposter.pdf "target ="_blank">View Design Poster</a>
                 <!-- End .project -->
+			    </div>
 		    
                 <div class="project shadow-large">
                     <div class="project no-image">
