--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                         <a href= "#">coming soon</a>
                     </div>
 			     </div>
+			     </div>
                     <!-- End .project-info -->
                 
 		    <div class="project shadow-large">
@@ -189,6 +190,7 @@ irregularities.
                         <a href="images/areport.pdf "target ="_blank">View Report </a>
 			<a href="images/aposter.pdf "target ="_blank">View Design Poster</a>
                 <!-- End .project -->
+			    </div>
 			    </div>
 		    </div>
                 <div class="project shadow-large">
