--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			Undergraduate Research Assistant. What I have learned the most during these experiences is that
 			    I don't know everything BUT I can learn anything. This has made me very comfortable in ambigous 
 			    situations and I have developed a calm approach to solving unknowns. I love engineering and
-			    am excited for the future where that might be.
+			    am excited for the future where ever that might be.
            
 
                     </p>
@@ -254,6 +254,7 @@ irregularities.
         <ul>
             <li>SolidWorks</li>
             <li>Python</li>
+	    <li>MATLAB</li>
             <li>Siemens NX</li>
             <li>CREO</li>
             <li>Fusion 360</li>
@@ -270,7 +271,7 @@ irregularities.
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
+      <!-- <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
             <form method="POST" action="https://formspree.io/xavier_johnson@berkeley.edu">
@@ -283,13 +284,14 @@ irregularities.
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
+-->
 
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2024</span> Xavier Johnson
+                        Copyright &copy; <span id="current-year">2025</span> Xavier Johnson
                     </p>
                 </div>
                 <div class="col-sm-2 top">
