--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@ irregularities.
                         </li>
                        
                         <li>
-                            <a href="linkedin.com/in/xavier-johnson-41a092199" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/xavier-johnson-41a092199" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         
                         <li>
